--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  /* margin: 5vw; */
+  background-color: rgb(188, 223, 225);
+  /* justify-content: center; */
+}
+
 .App {
   text-align: center;
 }
@@ -13,7 +19,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,10 +28,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
+}
+
+.App-main {
+  align-items: center;
 }
 
 @keyframes App-logo-spin {
