--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -8,8 +8,8 @@ section {
 }
 
 .bookmark {
-  align-self: flex-end;
-  margin-top: -8px;
+  align-self: flex-start;
+  /* margin-top: -8px; */
   margin-right: 20px;
   width: 30px;
 }
